# sicp

./: .clang-format  CMakeLists.txt  CPPLINT.cfg  ch1.cpp
